--- a/index.html
+++ b/index.html
@@ -104,8 +104,12 @@
 
             document.getElementById('box-color-palette').appendChild(cpForeColor);
             cpForeColor.addEventListener('input',function(evt){
-                const obj = {'foreColor':this.toString()}
-                editor.setContextConfig(obj);
+                // const targetColor = event?.target?.closest('.modal')?.dataset?.targetColor??'foreColor';
+
+                // if(targetColor=='foreColor'){
+                //     const obj = {'foreColor':this.toString()}
+                //     editor.setContextConfig(obj);
+                // }
             })
             cpForeColor.addEventListener('change',function(evt){
                 // const modal = bootstrap.Modal.getOrCreateInstance(document.querySelector('#modal-color-palette'))
@@ -114,9 +118,15 @@
             cpForeColor.addEventListener('confirm',function(evt){
                 const modal = bootstrap.Modal.getOrCreateInstance(document.querySelector('#modal-color-palette'))
                 modal.hide();
-                const obj = {'foreColor':this.toString()}
-                editor.setContextConfig(obj);
-                localStorage.setItem('foreColor',this.toString())
+                const wcTargetColor = event?.target?.closest('.modal')?.dataset?.wcTargetColor??'foreColor';
+                if(wcTargetColor=='foreColor'){
+                    const obj = {'foreColor':this.toString()}
+                    editor.setContextConfig(obj);
+                    localStorage.setItem('foreColor',this.toString())
+                }else if(wcTargetColor=='textColor'){
+                    const obj = {'textColor':this.toString()}
+                    editor.setTextConfig(obj);
+                }
             })
             cpForeColor.addEventListener('cancel',function(evt){
                 const modal = bootstrap.Modal.getOrCreateInstance(document.querySelector('#modal-color-palette'))
@@ -125,7 +135,11 @@
             cpForeColor.addEventListener('setselectedcolor',function(evt){
                 // console.log(evt.type,this.getSelectedColor())
             })
+            
 
+            document.querySelector('#modal-color-palette').addEventListener('show.bs.modal', event => {
+                event.target.dataset.wcTargetColor = event?.relatedTarget?.dataset.wcTargetColor??'foreColor';
+            })
         })
     </script>
     <!-- //color palette -->
@@ -214,7 +228,12 @@
                         <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Hand" data-bs-toggle="modal" data-bs-target="#modal-document-config"><i class="bi bi-sliders"></i></button>
 
                     </div>
-                    <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
+                    <div class="only-hidden-tool-Text">
+                        <button type="button" class="btn btn-lg btn-outline-light wc-bg-foreColor" data-wc-target-color="foreColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
+                    </div>
+                    <div class="only-shown only-shown-tool-Text">
+                        <button type="button" class="btn btn-lg btn-outline-light wc-bg-textColor position-relative" data-wc-target-color="textColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette-textColor" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i><div class="position-absolute bottom-0" style="left:0;right:0;"><i class="bi bi-alphabet-uppercase" style="color: #fff;"></i></div></button>
+                    </div>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-layers"><i class="bi bi-layers"></i></button>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-menu-setting"><i class="bi bi-gear"></i></button>
                 </div>
@@ -627,8 +646,11 @@
                             >
                             <div class="grid-auto-fit-260px gap-3">
                                 <div>
-                                  <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
-                                  <div><input type="color" class="form-control form-control-color w-100" name="textColor" value="#000000"></div>
+                                    <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
+                                    <div class="input-group">
+                                        <input type="color" readonly class="form-control form-control-color pe-none" name="textColor" value="#000000">
+                                        <button type="button" class="btn btn-outline-light wc-bg-textColor" data-wc-target-color="textColor" onclick="cpForeColor.setPreview(this.form.textColor.value)" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
+                                    </div>
                                 </div>
                                 <div>
                                   <div class="form-label mb-0"><i class="bi bi-type-italic"></i> fontStyle</div>
