--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
             
 
             document.querySelector('#modal-color-palette').addEventListener('show.bs.modal', event => {
-                event.target.dataset.wcTargetColor = event?.relatedTarget?.dataset.wcTargetColor??'foreColor';
+                const wcTargetColor = event.target.dataset.wcTargetColor = event?.relatedTarget?.dataset.wcTargetColor??'foreColor';
+                if(wcTargetColor=='foreColor'){
+                    cpForeColor.setPreview(editor.contextConfig.foreColor??'#000000')                    
+                }else if(wcTargetColor=='textColor'){
+                    cpForeColor.setPreview(editor?.document?.layer?.textConfig?.textColor??'#000000')
+                }
             })
         })
     </script>
@@ -231,7 +236,7 @@
                         <button type="button" class="btn btn-lg btn-outline-light wc-bg-foreColor" data-wc-target-color="foreColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
                     </div>
                     <div class="only-shown only-shown-tool-Text">
-                        <button type="button" class="btn btn-lg btn-outline-light wc-bg-textColor position-relative" data-wc-target-color="textColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette-textColor" style="text-shadow: 1px 0px 1px black;" onclick="cpForeColor.setPreview(editor?.document?.layer?.textConfig?.textColor??'#000000')"><i class="bi bi-palette" style="color: #fff;"></i><div class="position-absolute bottom-0" style="left:0;right:0;"><i class="bi bi-alphabet-uppercase" style="color: #fff;"></i></div></button>
+                        <button type="button" class="btn btn-lg btn-outline-light wc-bg-textColor position-relative" data-wc-target-color="textColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette-textColor" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i><div class="position-absolute bottom-0" style="left:0;right:0;"><i class="bi bi-alphabet-uppercase" style="color: #fff;"></i></div></button>
                     </div>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-layers"><i class="bi bi-layers"></i></button>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-menu-setting"><i class="bi bi-gear"></i></button>
@@ -648,7 +653,7 @@
                                     <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
                                     <div class="input-group">
                                         <input type="color" readonly class="form-control form-control-color pe-none" name="textColor" value="#000000">
-                                        <button type="button" class="btn btn-outline-light wc-bg-textColor" data-wc-target-color="textColor" onclick="cpForeColor.setPreview(this.form.textColor.value)" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
+                                        <button type="button" class="btn btn-outline-light wc-bg-textColor" data-wc-target-color="textColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
                                     </div>
                                 </div>
                                 <div>
