--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
 
             document.querySelector('.checkbox-tool[value="Brush"]').click(); // 최초 선택 툴
         })
+        window.addEventListener('wc.tools.select',event=>{ console.log(event.type,event.detail); })
+        window.addEventListener('wc.tool.activate',event=>{ console.log(event.type,event.detail); })
+        window.addEventListener('wc.tool.inactivate',event=>{ console.log(event.type,event.detail); })
+        window.addEventListener('wc.tool.confirm',event=>{ console.log(event.type,event.detail); })
+        window.addEventListener('wc.tool.cancel',event=>{ console.log(event.type,event.detail); })
+        
     </script>
 </head>
 <body>
