tool 동작에 대한 이벤트 발생 개선

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 
             document.querySelector('.checkbox-tool[value="Brush"]').click(); // 최초 선택 툴
         })
+        window.addEventListener('wc.tools.load',event=>{ console.log(event.type,event.detail); })
         window.addEventListener('wc.tools.select',event=>{ console.log(event.type,event.detail); })
         window.addEventListener('wc.tool.activate',event=>{ console.log(event.type,event.detail); })
         window.addEventListener('wc.tool.inactivate',event=>{ console.log(event.type,event.detail); })
