--- a/index.html
+++ b/index.html
@@ -1778,7 +1778,7 @@
 
 
         <div class="modal fade" id="modal-color-palette"  aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h2 class="modal-title fs-4"><i class="bi bi-palette"></i> Color palette</h1>
