tool 이벤트 부분 개선

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </script>
 </head>
 <body>
-    <div id="wc-app" class="wc-app debug-box">
+    <div id="wc-app" class="wc-app debug-box" data-tool="" data-tool-enable="false">
         <div class="wc-app-wrap">
             <div class="wc-app-header">
                 <div class="wc-app-nav d-flex gap-1 px-1 py-1 justify-content-center mx-auto">
@@ -224,7 +224,7 @@
                         <div class="only-shown only-shown-tool-Move"><button type="button" class="btn btn-lg btn-outline-light" ><i class="bi bi-arrows-move"></i></button></div>
                         <div class="only-shown only-shown-tool-Hand"><button type="button" class="btn btn-lg btn-outline-light" ><i class="bi bi-hand-index"></i></button></div>
                     </div>
-                    <div>
+                    <div class="group-only-enable-tool-enable">
                         <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Brush" data-bs-toggle="modal" data-bs-target="#modal-brush-config"><i class="bi bi-sliders"></i></button>
                         <!-- <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Brush1" data-bs-toggle="modal" data-bs-target="#modal-brush1-config"><i class="bi bi-sliders"></i></button> -->
                         <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Brush2" data-bs-toggle="modal" data-bs-target="#modal-brush2-config"><i class="bi bi-sliders"></i></button>
