wc.document.layers.select

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
         window.addEventListener('wc.tool.inactivate',event=>{ console.log(event.type,event.detail); })
         window.addEventListener('wc.tool.confirm',event=>{ console.log(event.type,event.detail); })
         window.addEventListener('wc.tool.cancel',event=>{ console.log(event.type,event.detail); })
-        
+        window.addEventListener('wc.document.layers.select',event=>{ console.log(event.type,event.detail); })
+       
     </script>
 </head>
 <body>
