텍스트레이어 추가시 기본색이 현재 foreColor 를 참고하게함

--- a/index.html
+++ b/index.html
@@ -685,10 +685,10 @@
                             <div class="grid-auto-fit-260px gap-3">
                                 <div>
                                     <div class="form-label mb-0"><i class="bi bi-palette"></i> Color</div>
-                                    <div class="input-group">
+                                    <label class="input-group" role="button" for="btn-palette-textColor">
                                         <input type="color" readonly class="form-control form-control-color pe-none" name="textColor" value="#000000">
-                                        <button type="button" class="btn btn-outline-light wc-bg-textColor" data-wc-target-color="textColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
-                                    </div>
+                                        <button type="button" class="btn btn-outline-light wc-bg-textColor pe-none" data-wc-target-color="textColor" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette-textColor" style="text-shadow: 1px 0px 1px black;"><i class="bi bi-palette" style="color: #fff;"></i></button>
+                                    </label>
                                 </div>
                                 <div>
                                   <div class="form-label mb-0"><i class="bi bi-type-italic"></i> fontStyle</div>
